# job-tracker

./: .gitignore  NOTES.md  PROJECT.md  README.md  pyproject.toml  sql_app.db  tailwind.config.js
.devcontainer/: devcontainer.json
app/: constants.py  crud.py  database.py  main.py  models.py  schema.py  schemas.py  utils.py
app/contacts/: models.py
app/crud/: contacts.py  jobs.py
app/domain/contacts/: crud.py  models.py  schema.py
app/domain/contacts/routers/: __init__.py  api_router.py  api_router_contact.py
app/domain/interviews/: crud.py  models.py  schema.py
app/domain/interviews/routers/: __init__.py  api_router.py
app/domain/jobs/: crud.py  models.py  schema.py
app/domain/jobs/routers/: __init__.py  api_router.py  app_router.py
app/domain/notes/: crud.py  models.py  schema.py  utils.py
app/interviews/: models.py  schema.py
app/interviews/routers/: __init__.py  api_router.py
app/jobs/: crud.py  models.py  schema.py
app/jobs/routers/: __init__.py  api_router.py  app_router.py
app/models/: association_tables.py  contact.py  interview.py  job.py  mixins.py  note.py
app/notes/: schema.py
app/routers/: api.py
app/routers/api/: __init__.py  contacts.py  jobs.py
app/routers/endpoints/: __init__.py  jobs.py
app/schemas/: contact.py  job.py
app/static/css/: main.css
app/templates/: _base.html  create_job.html  edit_job.html  index.html  view_job.html  view_jobs.html
app/tests/: conftest.py  test_app.py
app/tests/interviews/: test_api.py
app/tests/jobs/: conftest.py  test_api.py  test_app.py
(+2 files in other folders)
