[tool.poetry]
name = "job-tracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
ruff = "^0.4.7"
pytest = "^8.2.1"
pytailwindcss = "^0.2.0"
python-multipart = "^0.0.9"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
